--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.o
 *.a
 *.so
+src/*
 
 # Folders
 _obj
@@ -25,3 +26,7 @@ _testmain.go
 
 # Environment Variable
 sendgrid.env
+.env
+
+# Docker env file
+Dockerfile
